# aether-os

./: .gitignore  Cargo.toml  README.md
aether-tui/: Cargo.toml  build.rs
aether-tui/src/: main.rs
chronos-cli/: Cargo.toml  build.rs
chronos-cli/src/: main.rs
chronosd/: Cargo.toml  build.rs
chronosd/migrations/: 202603100001_initial_schema.sql
chronosd/src/: lib.rs  main.rs
chronosd/src/application/: cognitive_loop.rs  mod.rs  orchestrator.rs  shadow_service.rs
chronosd/src/domain/: agent.rs  audit.rs  budget.rs  checkpoint.rs  error.rs  identity.rs  llm.rs  mission.rs  mod.rs  tests.rs  tool.rs
chronosd/src/infrastructure/: mod.rs
chronosd/src/infrastructure/llm/: mock_provider.rs  mod.rs  openai.rs
chronosd/src/infrastructure/persistence/: mod.rs  sqlite_agent_repository.rs
chronosd/src/infrastructure/tools/: fs.rs  mod.rs  shell.rs
chronosd/src/presentation/: grpc_server.rs  mod.rs
chronosd/tests/: application_tests.rs  persistence_tests.rs  tool_tests.rs
docs/architecture/: 0001-foundations-rust-grpc.md  0002-mission-orchestration.md
docs/plans/: 2026-03-10-somnium-deep-heal-design.md
docs/reference/: 2026-03-10-grpc-api-reference.md
docs/specs/: 2026-03-10-aether-tui-design.md  2026-03-10-chronos-v1-specification.md
proto/: chronos.proto
