[package]
name = "aether-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = "0.12"
anyhow = { workspace = true }
ratatui = "0.26"
crossterm = "0.27"

[build-dependencies]
tonic-build = "0.11"
