[package]
name = "chronos-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = "0.12"
clap = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
tonic-build = "0.11"
