[package]
name = "chronosd"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
prost-types = "0.12"

[build-dependencies]
tonic-build = "0.11"
